# agentic-coding-llm

./: .gitignore  README.md  pyproject.toml
examples/messy_sample_repo/: README.md  messy.py
guidelines/: project_guideline.docx  project_guideline.md
src/agentic_repo_cleaner/: cli.py  config.py  models.py  modes.py  pipeline.py  prompts.py
src/agentic_repo_cleaner/agents/: applier_agent.py  mapper_agent.py  planner_agent.py  repair_agent.py  reviewer_agent.py  test_designer_agent.py
src/agentic_repo_cleaner/context/: context_builder.py  file_reader.py  guideline_loader.py  repo_mapper.py
src/agentic_repo_cleaner/editing/: backup_manager.py  patch_apply.py  workspace_manager.py
src/agentic_repo_cleaner/llm/: json_utils.py  model_router.py  ollama_client.py
src/agentic_repo_cleaner/reporting/: manifest.py  run_logger.py  summary_writer.py
src/agentic_repo_cleaner/utils/: paths.py  safe_json.py
src/agentic_repo_cleaner/validation/: import_check.py  profiles.py  smoke_runner.py  syntax_check.py  test_runner.py  validator.py
tests/: test_context_builder.py  test_guideline_loader.py  test_model_router.py  test_patch_apply.py  test_repo_mapper.py  test_smoke_cli.py  test_validator.py
